하단 참고 redux를 zustand로 교체 🎨 edit 부분 router 쓰지 않고 serversideProp을 써서 글 아이디 가져오기 🎨 import 순서 지정 및 적용 📝 styled-components 단점 추가 ✅ article-create-delete.ts의 로그인 안 한 상황에서 마지막에 홈페이지 방문하는 코드 삭제

--- a/사용기술.md
+++ b/사용기술.md
@@ -13,3 +13,5 @@ CSS 모듈과 달리 import를 할 때 자동완성이 됩니다.
 ### 단점
 
 Next.js에 적용하기 위한 설정이 까다롭습니다. 물론, 한 번 알면 괜찮지만, 그 한 번 알기가 어려워서 단점이라고 생각합니다.
+
+캐싱 없이 화면이 로드될 때, 스타일이 적용되지 않는 화면이 먼저 나옵니다.
