--- a/사용기술.md
+++ b/사용기술.md
@@ -15,3 +15,17 @@ CSS 모듈과 달리 import를 할 때 자동완성이 됩니다.
 Next.js에 적용하기 위한 설정이 까다롭습니다. 물론, 한 번 알면 괜찮지만, 그 한 번 알기가 어려워서 단점이라고 생각합니다.
 
 캐싱 없이 화면이 로드될 때, 스타일이 적용되지 않는 화면이 먼저 나옵니다.
+
+## Zustand
+
+### 사용 이유
+
+다른 회사의 과제를 한 적이 있었는데, 이를 사용한다면 가산점을 준다고 하길래 이 도구를 공부했습니다. 그리고 공부했기 때문에 이번 프로젝트에 적용해 보았습니다.
+
+### 장점
+
+Redux보다 더 간단합니다.
+
+### 단점
+
+아직까지 느낀 단점은 없습니다.
