하단 참고 react query 적용 🎨 커스텀 훅에 대한 import 순서 지정 및 적용 📝 고민 부분 없으므로 삭제

--- a/사용기술.md
+++ b/사용기술.md
@@ -29,3 +29,23 @@ Redux보다 더 간단합니다.
 ### 단점
 
 아직까지 느낀 단점은 없습니다.
+
+## React Query
+
+새로 배운 기술이어서 몇몇 군데에 적용해 보았습니다. 시간 관계상 모든 부분을 하지 못한 점 양해 바랍니다.
+
+### 장점
+
+로딩이나 에러 처리를 간결하게 할 수 있습니다.
+
+### 단점
+
+서버사이드렌더링에서는 적용될 수 없습니다.
+
+useMutation의 경우 재랜더링이 일어나지 않는 곳에서 사용하면 손해입니다. [components/article/DeleteRQ.tsx]에서 확인하실 수 있습니다.
+
+useMutation의 경우 어떠한 경우에는 코드양이 크게 주는 것 같지 않습니다. [components/edit]에서 Edit.tsx와 EditRQ.tsx를 비교하시거나, [components/create]에서 Create.tsx와 CreateRQ.tsx를 비교해 보시기 바랍니다.
+
+[pages/edit/[id].tsx]에서 서버에서 정보가 바뀌었음에도 불구하고 캐싱을 해서 새로운 정보가 아닌 이전 정보를 반영하는 현상이 있었습니다. 따라서 cacheTime을 0으로 지정했습니다.
+
+무한 스크롤 측면에서 Firebase하고 잘 맞지 않는 것 같습니다. [components/profile]의 WroteRQ1.tsx와 WroteRQ2.tsx에서 적용해 보려고 했지만 실패했습니다.
