--- a/에러.md
+++ b/에러.md
@@ -1,3 +1,7 @@
 ## profile/Wrote.tsx, profile/InterestList.tsx의 무한스크롤에서 처음에 자료 받고 바로 끝나는 상황
 
 isEnd가 true 되는 기준을 높여서 해결했습니다. 원인은 styled-components라고 생각합니다. 다른 것은 그대로 둔 상태에서 이것만 바꿨는데 일어났기 때문입니다.
+
+## pull request를 merge할 때, squash and merge를 해서 계속 dev 브랜치의 커밋들이 main 브랜치의 커밋들보다 앞서 있는 상황
+
+dev 브랜치에서 main 브랜치로 pull request로 merge를 할 때, main 브랜치의 커밋의 양을 줄이기 위해서 squash and merge를 했는데 위와 같은 문제가 발생했습니다. 왜냐하면 squash and merge가 dev 브랜치의 커밋들을 포함하지 않기 때문입니다. 간단한 예시는 다음 영상을 참고하시기 바랍니다. [링크](https://youtu.be/1MQjiEwA9OY)
