하단 참고 📝 README.md에서 AWS Amplify 링크 삭제 📝 에러.md에 GitHub Actions 내용 추가 📝 에러.md에 AWS Amplify 내용 추가 🔥 테스트용 커밋.md 파일 제거

--- a/에러.md
+++ b/에러.md
@@ -5,3 +5,13 @@ isEnd가 true 되는 기준을 높여서 해결했습니다. 원인은 styled-co
 ## pull request를 merge할 때, squash and merge를 해서 계속 dev 브랜치의 커밋들이 main 브랜치의 커밋들보다 앞서 있는 상황
 
 dev 브랜치에서 main 브랜치로 pull request로 merge를 할 때, main 브랜치의 커밋의 양을 줄이기 위해서 squash and merge를 했는데 위와 같은 문제가 발생했습니다. 왜냐하면 squash and merge가 dev 브랜치의 커밋들을 포함하지 않기 때문입니다. 간단한 예시는 다음 영상을 참고하시기 바랍니다. [링크](https://youtu.be/1MQjiEwA9OY)
+
+## GitHub Actions의 Cypress에서 'TypeError: fetch failed' 오류 발생
+
+원인은 GitHub Actions의 Windows였습니다. Unbuntu로 바꾸고 나서 해결이 되었습니다. 이것이 원인이라는 것을 밝히기 위해 여러 방법을 썼습니다. Action을 다시 돌리기도 했고, 새로운 커밋을 만들기도 했고, 테스트에 문제가 있을까봐 로컬에서 테스트도 했습니다.
+
+원래 Windows에서 되었던 것이기도 했고, 'TypeError: fetch failed'라고 검색을 하면 다른 원인들이 나와서 원인을 찾기 힘들었습니다.
+
+## AWS Amplify를 사용했다가 사용하지 않고 있는 이유
+
+카테고리나 글을 가져오지 못하는 오류가 발생합니다. 그 원인은 모르겠습니다. 콘솔에는 두 가지 내용이 뜨는데요. 첫 번째는 Next.js의 Client-side Exception Occurred에 관한 내용입니다. 고칠 수 있는 방법으로 error boundaries를 더하는 것을 제시하는데, 이는 class 컴포넌트에만 적용이 됩니다. 두 번째는 그냥 "500 - Internal Server Error"라고만 밝히고 있습니다. Next.js의 API Route의 문제가 아닐까라고 생각을 했지만, AWS 측에서 이를 지원한다고 밝히기도 했고, 계정의 이름이나 사진은 가져오기 때문에 이것이 원인은 아니라고 생각합니다.
