📝 GitHub Pages 관련 action 삭제에 대한 내용 추가

--- a/에러.md
+++ b/에러.md
@@ -15,3 +15,7 @@ dev 브랜치에서 main 브랜치로 pull request로 merge를 할 때, main 브
 ## AWS Amplify를 사용했다가 사용하지 않고 있는 이유
 
 카테고리나 글을 가져오지 못하는 오류가 발생합니다. 그 원인은 모르겠습니다. 콘솔에는 두 가지 내용이 뜨는데요. 첫 번째는 Next.js의 Client-side Exception Occurred에 관한 내용입니다. 고칠 수 있는 방법으로 error boundaries를 더하는 것을 제시하는데, 이는 class 컴포넌트에만 적용이 됩니다. 두 번째는 그냥 "500 - Internal Server Error"라고만 밝히고 있습니다. Next.js의 API Route의 문제가 아닐까라고 생각을 했지만, AWS 측에서 이를 지원한다고 밝히기도 했고, 계정의 이름이나 사진은 가져오기 때문에 이것이 원인은 아니라고 생각합니다.
+
+## GitHub Pages 만드는 GitHub Action 취소하기
+
+원래는 Mochawesome 때문에 GitHub Pages를 사용했으나 CI(Continuous Integration)를 위한 GitHub Actions를 사용하면서 이를 사용하지 않기로 했습니다. 그런데 관련 Action이 계속되어서 이를 막고자 했는데 그 방법을 찾기 어려웠습니다. 결국 그 방법은 branch를 none으로 하는 것이었습니다. 관련 영상은 다음과 같습니다. [링크](https://youtu.be/uI0fHuCbjEY)
