--- a/사용기술.md
+++ b/사용기술.md
@@ -60,8 +60,12 @@ CI(Continuous Integration)를 하기 위해 사용했습니다.
 
 dev 브랜치를 만들고, dev 브랜치에 push가 될 때마다 cypress가 작동하도록 하였습니다. 그리고 이를 통과하면 main 브랜치에서 제가 직접 merge를 합니다.
 
-### 어려웠던 점
+## Yarn Berry를 적용하려다가 실패
 
-일부 cypress 테스트가 통과되지 않은 적이 있었는데요. GitHub Actions에 대한 지식에 부족해서 그런 줄 알았습니다. 그러다가 우연히 cypress 테스트 자체에 문제가 있었다는 것을 발견하게 되었고, 다시 시도해보니 통과하였습니다.
+Vercel에서 빌드가 되지 않습니다. 그리고 Vercel 측에서도 지원을 하지 않는다고 합니다. [링크](https://vercel.com/guides/does-vercel-support-yarn-2)
 
-search.ts에서 계속 통과가 안 되길래 고민을 했습니다. 그러다가 npx cypress open을 할 때, 첫 테스트는 안 되지만 그 이후에 다시 시도하는 테스트들은 되는 것을 확인했습니다. 그리고 첫 테스트에서는 검색 결과가 비어 있었습니다. 이를 통해 검색 결과가 늦게 와서 통과가 안 되는 것인지를 의심했고, 그 이유가 맞았습니다.
+GitHub Actions에서도 여러 시도를 했지만 실패했습니다.
+
+## AWS Amplify를 사용했다가 사용하지 않고 있는 이유
+
+카테고리나 글을 가져오지 못하는 오류가 발생합니다. 그 원인은 모르겠습니다. 콘솔에는 두 가지 내용이 뜨는데요. 첫 번째는 Next.js의 Client-side Exception Occurred에 관한 내용입니다. 고칠 수 있는 방법으로 error boundaries를 더하는 것을 제시하는데, 이는 class 컴포넌트에만 적용이 됩니다. 두 번째는 그냥 "500 - Internal Server Error"라고만 밝히고 있습니다. Next.js의 API Route의 문제가 아닐까라고 생각을 했지만, AWS 측에서 이를 지원한다고 밝히기도 했고, 계정의 이름이나 사진은 가져오기 때문에 이것이 원인은 아니라고 생각합니다.
