--- a/에러.md
+++ b/에러.md
@@ -6,16 +6,30 @@ isEnd가 true 되는 기준을 높여서 해결했습니다. 원인은 styled-co
 
 dev 브랜치에서 main 브랜치로 pull request로 merge를 할 때, main 브랜치의 커밋의 양을 줄이기 위해서 squash and merge를 했는데 위와 같은 문제가 발생했습니다. 왜냐하면 squash and merge가 dev 브랜치의 커밋들을 포함하지 않기 때문입니다. 간단한 예시는 다음 영상을 참고하시기 바랍니다. [링크](https://youtu.be/1MQjiEwA9OY)
 
+## GitHub Actions에서 일부 Cypress 테스트가 통과되지 않았음
+
+처음에는 GitHub Actions에 대한 지식에 부족해서 그런 줄 알았습니다. 그러다가 우연히 cypress 테스트 자체에 문제가 있었다는 것을 발견하게 되었고, 다시 시도해보니 통과하였습니다.
+
+## Cypess의 search.ts가 통과되지 않았음
+
+처음에는 GitHub Actions에서 search.ts에서 계속 통과가 안 되길래 고민을 했습니다. 그러다가 npx cypress open을 할 때, 첫 테스트는 안 되지만 그 이후에 다시 시도하는 테스트들은 되는 것을 확인했습니다. 그리고 첫 테스트에서는 검색 결과가 비어 있었습니다. 이를 통해 검색 결과가 늦게 와서 통과가 안 되는 것인지를 의심했고, 그 이유가 맞았습니다.
+
+## GitHub Pages 만드는 GitHub Action 취소하기
+
+원래는 Mochawesome 때문에 GitHub Pages를 사용했으나 CI(Continuous Integration)를 위한 GitHub Actions를 사용하면서 이를 사용하지 않기로 했습니다. 그런데 관련 Action이 계속되어서 이를 막고자 했는데 그 방법을 찾기 어려웠습니다. 결국 그 방법은 branch를 none으로 하는 것이었습니다. 관련 영상은 다음과 같습니다. [링크](https://youtu.be/uI0fHuCbjEY)
+
 ## GitHub Actions의 Cypress에서 'TypeError: fetch failed' 오류 발생
+
+### 1단계: Windows에서 Unbuntu로 운영체제 변경
 
 원인은 GitHub Actions의 Windows였습니다. Unbuntu로 바꾸고 나서 해결이 되었습니다. 이것이 원인이라는 것을 밝히기 위해 여러 방법을 썼습니다. Action을 다시 돌리기도 했고, 새로운 커밋을 만들기도 했고, 테스트에 문제가 있을까봐 로컬에서 테스트도 했습니다.
 
 원래 Windows에서 되었던 것이기도 했고, 'TypeError: fetch failed'라고 검색을 하면 다른 원인들이 나와서 원인을 찾기 힘들었습니다.
 
-## AWS Amplify를 사용했다가 사용하지 않고 있는 이유
+### 2단계: 다시 안 됨
 
-카테고리나 글을 가져오지 못하는 오류가 발생합니다. 그 원인은 모르겠습니다. 콘솔에는 두 가지 내용이 뜨는데요. 첫 번째는 Next.js의 Client-side Exception Occurred에 관한 내용입니다. 고칠 수 있는 방법으로 error boundaries를 더하는 것을 제시하는데, 이는 class 컴포넌트에만 적용이 됩니다. 두 번째는 그냥 "500 - Internal Server Error"라고만 밝히고 있습니다. Next.js의 API Route의 문제가 아닐까라고 생각을 했지만, AWS 측에서 이를 지원한다고 밝히기도 했고, 계정의 이름이나 사진은 가져오기 때문에 이것이 원인은 아니라고 생각합니다.
+어느 순간 다시 되지 않기 시작했습니다. 그래서 여러 방법을 썼는데도 되지 않았습니다. 방법들은 다음과 같습니다.
 
-## GitHub Pages 만드는 GitHub Action 취소하기
+- 운영체제 변경: Ubuntu의 버전은 낮추기, Windows로 변경
 
-원래는 Mochawesome 때문에 GitHub Pages를 사용했으나 CI(Continuous Integration)를 위한 GitHub Actions를 사용하면서 이를 사용하지 않기로 했습니다. 그런데 관련 Action이 계속되어서 이를 막고자 했는데 그 방법을 찾기 어려웠습니다. 결국 그 방법은 branch를 none으로 하는 것이었습니다. 관련 영상은 다음과 같습니다. [링크](https://youtu.be/uI0fHuCbjEY)
+- cache를 삭제하고 해 보기
